--- a/src/css/login.scss
+++ b/src/css/login.scss
@@ -18,7 +18,7 @@
 
     .card{
         border-radius: 3em;
-        background-color: #00000060;
+        background-color:  var(--accountBackground);
         border: 1px solid black;
         box-shadow: 1px 1px 5px 1px black;
 
