--- a/src/css/payment-card.scss
+++ b/src/css/payment-card.scss
@@ -20,8 +20,12 @@
     height: 100%;
     border-radius: 24px;
   
-    background: var(--dark);
+    background: var(--paymentCardBg);
     transition: 0.5s;
+  }
+
+  .card-edit{
+    background: var(--paymentCardBgEdit);
   }
   
   .card ul {
