--- a/src/css/paymentpage.scss
+++ b/src/css/paymentpage.scss
@@ -10,7 +10,7 @@
     width: 100%;
     height: 100%;
     border-radius: 24px;
-    background-color: #04051df3;
+    background-color: #001e6c;
     transition: 0.5s;
   
     h1 {
@@ -178,7 +178,7 @@
     margin: 20em;
     border-radius: 3em;
     padding: 3em;
-    background-color: #00000030;
+    background-color: var(--accountBackground);
     box-shadow: 3px 3px 10px black;
   }
 
